# BITWISE

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/: general.h  platform.h  test_lib.h
src/: bitwise.c
tests/: test_bitwise.c
